--- a/index.html
+++ b/index.html
@@ -5,6 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Erlan Abdullaev</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Nunito:wght@200;500&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="header-nav">
+          <a href="#" class="header-logo">EA</a>
+          <ul class="header-menu">
+            <li class="header-menu-item">
+              <a href="#home" class="header-menu-link">Home</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#skills" class="header-menu-link">Skills</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#code-example" class="header-menu-link">Code Example</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#portfolio" class="header-menu-link">Portfolio</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#language" class="header-menu-link">Languages</a>
+            </li>
+            <li class="header-menu-item">
+              <a href="#education" class="header-menu-link">Education</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
