Add: intro, contacts, code, skills

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#skills" class="header-menu-link">Skills</a>
             </li>
             <li class="header-menu-item">
-              <a href="#code-example" class="header-menu-link">Code Example</a>
+              <a href="#code" class="header-menu-link">Code Example</a>
             </li>
             <li class="header-menu-item">
               <a href="#portfolio" class="header-menu-link">Portfolio</a>
@@ -41,5 +41,77 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="intro">
+        <div class="container">
+          <div class="intro-inner">
+            <div class="intro-left">
+              <img class="intro-img" src="Delphi_750x750.png" alt="Erlan" />
+            </div>
+            <div class="intro-right">
+              <h1>Erlan Abdullaev</h1>
+              <h3>Frontend developer</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                eos sapiente placeat sit in facere veniam saepe numquam, dolorem
+                ad iste, distinctio ducimus, corporis eveniet dolores. Unde,
+                consectetur veniam. Nostrum?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="container">
+          <h2 class="section-title">Contacts</h2>
+          <ul>
+            <li>
+              <h4>Location</h4>
+              <p>Bazar-Korgon, Kyrgyzstan</p>
+            </li>
+            <li>
+              <h4>Phone</h4>
+              <a href="tel:+996778148976">+996 778 14 89 76</a>
+            </li>
+            <li>
+              <h4>Email</h4>
+              <a href="mailto:abdullaev.erlan.kk@gmail.com"
+                >abdullaev.erlan.kk@gmail.com</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="skills" class="skills section">
+        <div class="container">
+          <h2>Skills</h2>
+          <ul>
+            <li>html</li>
+            <li>sass</li>
+            <li>delphi</li>
+            <li>javascript</li>
+            <li>git</li>
+            <li>vscode</li>
+          </ul>
+        </div>
+      </section>
+      <section id="code" class="code-example section">
+        <div class="container">
+          <h2 class="section-yiyle">Code Example</h2>
+          <p>
+            <b>Task:</b>Lorem ipsum, dolor sit amet consectetur adipisicing
+            elit. Aspernatur sapiente
+          </p>
+
+          <pre>
+            <code>
+              function multiply (a, b) {
+                return a * b;
+              }
+            </code>
+          </pre>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
