--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="#portfolio" class="header-menu-link">Portfolio</a>
             </li>
             <li class="header-menu-item">
-              <a href="#language" class="header-menu-link">Languages</a>
+              <a href="#languages" class="header-menu-link">Languages</a>
             </li>
             <li class="header-menu-item">
               <a href="#education" class="header-menu-link">Education</a>
@@ -46,16 +46,18 @@
         <div class="container">
           <div class="intro-inner">
             <div class="intro-left">
-              <img class="intro-img" src="Delphi_750x750.png" alt="Erlan" />
+              <img
+                class="intro-img"
+                src="IMG-20200703-WA0136.jpg"
+                alt="Erlan"
+              />
             </div>
             <div class="intro-right">
               <h1>Erlan Abdullaev</h1>
               <h3>Frontend developer</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-                eos sapiente placeat sit in facere veniam saepe numquam, dolorem
-                ad iste, distinctio ducimus, corporis eveniet dolores. Unde,
-                consectetur veniam. Nostrum?
+                I want to be a programmer. Now I'm studying the Frontend course,
+                in the future I want to learn several programming languages
               </p>
             </div>
           </div>
@@ -112,6 +114,49 @@
           </pre>
         </div>
       </section>
+      <section id="portfolio" class="portfolio section">
+        <div class="container">
+          <h2 class="section-title portfolio-title">Portfolio</h2>
+          <ul>
+            <li>
+              <img src="1111.png" height="250" alt="Raspisanie project" />
+              <h3>Schedule project</h3>
+              <a
+                href="https://er1an.github.io/er1an.raspisanie.io/"
+                target="_blank"
+                >View project</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="education" class="education">
+        <div class="container">
+          <h2 class="education-title">EDUCATION</h2>
+          <ul>
+            <li>
+              <h3>Jalal-Abad state university</h3>
+            </li>
+            <li>
+              <h3>Faculty of pedagogy and information technologies</h3>
+            </li>
+            <li><h3>Informatics and Computer Engineering</h3></li>
+          </ul>
+        </div>
+      </section>
+      <section id="languages" class="languages section">
+        <div class="container">
+          <h2>LANGUAGES</h2>
+          <ul>
+            <li><b>Kyrgyz-</b>speak-fluently</li>
+            <li><b>Russian-</b>middle</li>
+            <li><b>English-</b>newbie</li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <p class="footer-p">
+      © Erlan Abdullaev 2022-<a href="https://github.com/er1an">Me on github</a>
+    </p>
   </body>
 </html>
