--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Nunito:wght@200;500&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container media-menu">
         <nav class="header-nav">
           <a href="#" class="header-logo">EA</a>
-          <ul class="header-menu">
+          <ul class="header-menu" id="MeniItems">
             <li class="header-menu-item">
               <a href="#home" class="header-menu-link">Home</a>
             </li>
@@ -39,6 +46,9 @@
             </li>
           </ul>
         </nav>
+        <button>
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </button>
       </div>
     </header>
     <main>
@@ -48,7 +58,7 @@
             <div class="intro-left">
               <img
                 class="intro-img"
-                src="IMG-20200703-WA0136.jpg"
+                src="img/IMG-20200703-WA0136.jpg"
                 alt="Erlan"
               />
             </div>
@@ -64,7 +74,7 @@
         </div>
       </section>
       <section class="contacts">
-        <div class="container">
+        <div class="container contacts-margin">
           <h2 class="section-title">Contacts</h2>
           <ul>
             <li>
@@ -86,24 +96,23 @@
       </section>
       <section id="skills" class="skills section">
         <div class="container">
-          <h2>Skills</h2>
-          <ul>
-            <li>html</li>
-            <li>sass</li>
-            <li>delphi</li>
-            <li>javascript</li>
-            <li>git</li>
-            <li>vscode</li>
-          </ul>
+          <div class="common">
+            <h2>Skills</h2>
+            <ul>
+              <li>html</li>
+              <li>sass</li>
+              <li>delphi</li>
+              <li>javascript</li>
+              <li>git</li>
+              <li>vscode</li>
+            </ul>
+          </div>
         </div>
       </section>
       <section id="code" class="code-example section">
         <div class="container">
           <h2 class="section-yiyle">Code Example</h2>
-          <p>
-            <b>Task:</b>Lorem ipsum, dolor sit amet consectetur adipisicing
-            elit. Aspernatur sapiente
-          </p>
+          <p><b>Task:</b>Function in JavaScript</p>
 
           <pre>
             <code>
@@ -119,7 +128,7 @@
           <h2 class="section-title portfolio-title">Portfolio</h2>
           <ul>
             <li>
-              <img src="1111.png" height="250" alt="Raspisanie project" />
+              <img src="img/1111.png" height="250" alt="Raspisanie project" />
               <h3>Schedule project</h3>
               <a
                 href="https://er1an.github.io/er1an.raspisanie.io/"
