--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </ul>
         </nav>
         <button>
-          <i class="fa fa-bars" aria-hidden="true"></i>
+          <i class="fa fa-bars"></i>
         </button>
       </div>
     </header>
@@ -97,7 +97,7 @@
       <section id="skills" class="skills section">
         <div class="container">
           <div class="common">
-            <h2>Skills</h2>
+            <h2 class="section-title">Skills</h2>
             <ul>
               <li>html</li>
               <li>sass</li>
@@ -141,7 +141,7 @@
       </section>
       <section id="education" class="education">
         <div class="container">
-          <h2 class="education-title">EDUCATION</h2>
+          <h2 class="education-title section-title">EDUCATION</h2>
           <ul>
             <li>
               <h3>Jalal-Abad state university</h3>
@@ -155,7 +155,7 @@
       </section>
       <section id="languages" class="languages section">
         <div class="container">
-          <h2>LANGUAGES</h2>
+          <h2 class="section-title">LANGUAGES</h2>
           <ul>
             <li><b>Kyrgyz-</b>speak-fluently</li>
             <li><b>Russian-</b>middle</li>
