--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </section>
       <section id="code" class="code-example section">
         <div class="container">
-          <h2 class="section-yiyle">Code Example</h2>
+          <h2 class="section-yiyle">Code Example.</h2>
           <p><b>Task:</b>Function in JavaScript</p>
 
           <pre>
