--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section id="skills" class="skills section">
         <div class="container">
           <div class="common">
-            <h2 class="section-title">Skills</h2>
+            <h2 class="section-title">Skills.</h2>
             <ul>
               <li>html</li>
               <li>sass</li>
