--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
         <div class="container">
           <div class="intro-inner">
             <div class="intro-left">
-              <img
-                class="intro-img"
-                src="img/IMG-20200703-WA0136.jpg"
-                alt="Erlan"
-              />
+              <img class="intro-img" src="" alt="Erlan's img" />
             </div>
             <div class="intro-right">
               <h1>Erlan Abdullaev</h1>
